--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -5,9 +5,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Rubik&family=Lexend+Deca" rel="stylesheet">
+		<link rel="stylesheet" href="/all.css">
 		<title>Runimo94</title>
 	</head>
-<body>
+<body class="bg-myBackground bg-no-repeat bg-cover">
   <slot/>
 </body>
 </html>
