--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -1,10 +1,28 @@
-<section>
-  <div class="flex flex-col-reverse md:flex-row gap-y-5 gap-x-6 items-center h-96">
-    <div class="text-white text-3xl md:text-2xl lg:text-3xl font-semibold text-center md:text-end font-LexendDeca">
-    <span class="whitespace-nowrap">Hola, Soy Rubén Nicolás Morales</span>, <br>Desarrollador fullstack
+---
+import Button from './Button.astro'
+import {dataInicio} from '../config/config'
+---
+
+<section class="md:h-[800px] flex items-center justify-center w-full">
+  <div class="flex flex-col gap-y-5">
+    <h1
+      class="text-[2.5rem] md:text-[3rem] lg:text-[4rem] xl:text-[5rem] font-bold text-center md:text-end font-LexendDeca text-transparent bg-clip-text bg-gradient-to-r from-color1 to-color2"
+    >
+      <span>{dataInicio.textHeader}</span>
+      <br />{dataInicio.textHeader2}
+    </h1>
+
+    <div class="flex flex-col items-center justify-center md:items-end md:justify-end md:flex-row text-white gap-x-10 gap-y-5">
+      {
+        dataInicio.listButtons.map((btn) => {
+          return(
+            <>
+              <Button text={btn.text} url={btn.url}/>
+            </>
+          )
+        })
+      }
     </div>
-    <div>
-      <img class="border-none w-56 md:w-52 lg:w-60 xl:w-72 rounded-full aspect-square overflow-hidden object-cover" src="runimo94.png" alt="runimo94 imagen">
-    </div>
+
   </div>
 </section>
