--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="scroll-smooth" style="scroll-padding-top: 50px;">
   <head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="/all.css">
 		<title>Runimo94</title>
 	</head>
-<body class="bg-myBackground bg-no-repeat bg-cover">
+		<body class="bg-myBackground_sm xl:bg-myBackground bg-cover bg-no-repeat bg-fixed">
   <slot/>
 </body>
 </html>
