header y imagen clickable

--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -1,16 +1,28 @@
 ---
-import {dataAboutMe} from "../config/config"
+import { dataAboutMe } from "../config/config";
 ---
 
-<section id="SobreMi" class="p-10 flex flex-col md:flex-row items-center justify-center gap-10">
-
+<section id="SobreMi" class="flex flex-col gap-y-10 w-full">
+  <div class="flex flex-col px-5 md:px-0 gap-y-2">
+    <h1 class="text-white text-5xl font-Rubik text-center md:text-start">SOBRE MI</h1>
+    <hr>
+  </div>
+  <div class="flex flex-col md:flex-row items-center justify-center gap-10">
     <div class="flex flex-col items-center gap-y-2">
-      <img class="border-none w-56 md:w-52 lg:w-60 xl:w-72 rounded-full aspect-square overflow-hidden object-cover" src={dataAboutMe.image} alt="runimo94 imagen">
-      <p class="hidden md:inline italic text-[10px] w-60 text-white font-Rubik">{dataAboutMe.subtext}</p>
+      <img
+        class="border-none w-56 md:w-52 lg:w-60 xl:w-72 rounded-full aspect-square overflow-hidden object-cover"
+        src={dataAboutMe.image}
+        alt="runimo94 imagen"
+      />
+      <p class="hidden md:inline italic text-[10px] w-60 text-white font-Rubik">
+        {dataAboutMe.subtext}
+      </p>
     </div>
-    
-    <p class="text-white font-Rubik w-72 md:w-[24rem] lg:w-[40rem] text-lg lg:text-xl 2xl:text-2xl">
-     {dataAboutMe.text}
+
+    <p
+      class="text-white font-Rubik w-72 md:w-[24rem] lg:w-[32rem] xl:w-[50rem] 2xl:w-[60rem] text-lg lg:text-2xl"
+    >
+      {dataAboutMe.text}
     </p>
-  
+  </div>
 </section>
