--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,21 +1,34 @@
 ---
+import IconTech from "./IconTech.astro"
+
 interface Props {
   image: string;
   title: string;
   urlCode: string;
   url: string;
+  techIcons: string[];
 }
 
-const { image, title, urlCode, url } = Astro.props as Props;
----
+const { image, title, urlCode, url, techIcons } = Astro.props as Props;---
 
 <div
-  class="w-[300px] h-[440px] lg:w-[330px] lg:h-[470px] flex flex-col justify-between pb-5 shadow-2xl rounded-lg gap-y-4 backdrop-filter backdrop-blur bg-black/50"
+  class="w-[300px] h-[480px] lg:w-[330px] lg:h-[500px] xl:w-[300px] xl:h-[500px] flex flex-col justify-between pb-5 shadow-2xl rounded-lg gap-y-4 backdrop-filter backdrop-blur bg-black/50"
 >
   <a href={url}><img class="rounded-t-lg" src={image} alt="imagen del proyecto" /></a>
   <h1 class="text-white text-xl text-center p-3 font-LexendDeca">
     {title}
   </h1>
+
+  <div class="flex items-center justify-center gap-x-2">
+    {
+      techIcons.map((tech) =>{
+        return(
+          <IconTech size="w-8" tech={tech}/>
+        )
+      })
+    }
+  </div>
+
   <div class="flex flex-row justify-evenly gap-x-4">
     <a
       href={urlCode}
@@ -29,10 +42,7 @@ const { image, title, urlCode, url } = Astro.props as Props;
       class="flex items-center justify-center text-white text-lg text-center font-LexendDeca w-32 h-12 hover:bg-white/10"
     >
       <i class="fa fa-link mr-3" aria-hidden="true"></i>
-      Ver
+      Demo
     </a>
   </div>
 </div>
-
-<script>
-</script>
