--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,16 +3,21 @@ import ProjectCard from "./ProjectCard.astro";
 import {dataProjects} from "../config/config"
 ---
 
-<section class="grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-x-16 gap-y-10">
-  
-  {
-    dataProjects.listProjects.map((project) => {
-      return(
-        <>
-          <ProjectCard image={project.image} title={project.title} urlCode={project.urlCode} url={project.url}/>
-        </>
-      )
-    })
-  }
+<section id="Proyectos" class="flex flex-col gap-y-10 w-full">
+  <div class="flex flex-col px-5 md:px-0 gap-y-2">
+    <h1 class="text-white text-5xl font-Rubik text-center md:text-start">PROYECTOS</h1>
+    <hr>
+  </div>
 
+  <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 justify-items-center gap-y-5">
+    {
+      dataProjects.listProjects.map((project) => {
+        return(
+          <>
+            <ProjectCard image={project.image} title={project.title} urlCode={project.urlCode} url={project.url} techIcons={project.techIcons}/>
+          </>
+        )
+      })
+    }
+  </div>
 </section>
