--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,11 @@ import Projects from "../components/Projects.astro";
         <Inicio />
       </div>
 
-      <div class="flex flex-col items-center py-10 sm:px-10 md:px-20 lg:px-36 xl:px-40 2xl:px-72 bg-gray-900 gap-y-28 w-full">
+      <div class="bg-gray-900 w-full flex justify-center py-10">
+        <div class="flex flex-col items-center container bg-gray-900 gap-y-28 ">
         <AboutMe />
         <Projects />
+        </div>
       </div>
 
 			<div class="mb-32"></div>
