--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -9,7 +9,8 @@ interface Props {
   techIcons: string[];
 }
 
-const { image, title, urlCode, url, techIcons } = Astro.props as Props;---
+const { image, title, urlCode, url, techIcons } = Astro.props as Props;
+---
 
 <div
   class="w-[300px] h-[480px] lg:w-[330px] lg:h-[500px] xl:w-[300px] xl:h-[500px] flex flex-col justify-between pb-5 shadow-2xl rounded-lg gap-y-4 backdrop-filter backdrop-blur bg-black/50"
