center buttons project card

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -30,7 +30,7 @@ const { image, title, urlCode, url, techIcons } = Astro.props as Props;
     }
   </div>
 
-  <div class="flex flex-row justify-evenly gap-x-4">
+  <div class="flex flex-row justify-center gap-x-4">
     <a
       href={urlCode}
       class="flex items-center justify-center text-white text-lg text-center font-LexendDeca w-32 h-12 hover:bg-white/10"
