alto del tamaño de la pantalla

--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -3,7 +3,7 @@ import Button from './Button.astro'
 import {dataInicio} from '../config/config'
 ---
 
-<section class="md:h-[800px] flex items-center justify-center w-full">
+<section class="h-screen flex items-center justify-center w-full">
   <div class="flex flex-col gap-y-5">
     <h1
       class="text-[2.5rem] md:text-[3rem] lg:text-[4rem] xl:text-[5rem] font-bold text-center md:text-end font-LexendDeca text-transparent bg-clip-text bg-gradient-to-r from-color1 to-color2"
