--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Projects from "../components/Projects.astro";
   <div class="w-screen">
     <Header />
 
-    <div class="flex flex-col items-center gap-y-16 py-32 w-full">
+    <div class="flex flex-col items-center gap-y-16 w-full">
       <div class="px-6 sm:px-10 md:px-20 lg:px-24 2xl:px-72">
         <Inicio />
       </div>
