colores cambiados de la scrollbar

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -15,16 +15,16 @@
     <style>
       * {
         scrollbar-width: thin;
-        scrollbar-color: #1f1f1f #3a3a3b;
+        scrollbar-color: #3a3a3b #1f1f1f;
 				overflow-x: hidden;
       }
       *::-webkit-scrollbar {
         width: 10px;
-        background-color: #3a3a3b;
+        background-color: #1f1f1f;
       }
 
       *::-webkit-scrollbar-thumb {
-        background-color: #1f1f1f;
+        background-color: #3a3a3b;
         border-radius: 20px;
       }
     </style>
