--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../components/Layout.astro";
+import Layout from "../layouts/Layout.astro";
 import Header from "../components/HeaderNav.astro";
 import Inicio from "../components/Inicio.astro";
 import AboutMe from "../components/Aboutme.astro";
