--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "../components/HeaderNav.astro";
 import Inicio from "../components/Inicio.astro";
 import AboutMe from "../components/Aboutme.astro";
 import Projects from "../components/Projects.astro";
+import Skills from "../components/Skills.astro";
 ---
 
 <Layout>
@@ -19,6 +20,7 @@ import Projects from "../components/Projects.astro";
         <div class="flex flex-col items-center container bg-gray-900 gap-y-28 ">
         <AboutMe />
         <Projects />
+        <Skills/>
         </div>
       </div>
 
