--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -15,18 +15,20 @@ const { skill } = Astro.props as Props;
 
 <div
   id={skill.id}
-  class="skill-card hidden flex-col justify-around gap-y-5 w-full h-96 bg-slate-800 p-10 rounded-3xl"
+  class="skill-card hidden flex-col justify-between gap-y-5 w-[50rem] h-[32rem] bg-slate-800 p-10 rounded-3xl"
 >
+<div class="flex flex-col gap-y-5">
   <h1 class="text-white text-3xl font-LexendDeca">
     {skill.skillName}
   </h1>
-  <p class="text-white text-start">
+  <p class="text-white text-xl text-start">
     {skill.text}
   </p>
-  <div class="flex items-center justify-center gap-x-6">
+</div>
+  <div class="flex items-center justify-center gap-x-6 mb-10">
     {
       skill.techIcons.map((tech) => {
-        return <IconTech classes="w-12" tech={tech} />;
+        return <IconTech classes="w-16" tech={tech} />;
       })
     }
   </div>
