--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -15,20 +15,23 @@ const { skill } = Astro.props as Props;
 
 <div
   id={skill.id}
-  class="skill-card hidden flex-col justify-between gap-y-5 w-[50rem] h-[32rem] bg-slate-800 p-10 rounded-3xl"
+  class="skill-card flex flex-col justify-between gap-y-10 bg-slate-800 p-7 lg:p-10 rounded-3xl"
 >
-<div class="flex flex-col gap-y-5">
-  <h1 class="text-white text-3xl font-LexendDeca">
-    {skill.skillName}
-  </h1>
-  <p class="text-white text-xl text-start">
+<div class="flex flex-col gap-y-10">
+  <div class="flex flex-row justify-between">
+    <h1 class="text-white text-4xl font-LexendDeca text-start">
+      {skill.skillName}
+    </h1>
+    <button class="inline lg:hidden text-white">CLICK</button>
+  </div>
+  <p class="font-Rubik text-white text-justify mx-auto lg:text-start lg:mx-0 lg:text-xl">
     {skill.text}
   </p>
 </div>
-  <div class="flex items-center justify-center gap-x-6 mb-10">
+  <div class="flex items-center justify-center gap-x-6">
     {
       skill.techIcons.map((tech) => {
-        return <IconTech classes="w-16" tech={tech} />;
+        return <IconTech classes="w-10 lg:w-16" tech={tech} />;
       })
     }
   </div>
