--- a/src/components/ProjectsComponents/Projects.astro
+++ b/src/components/ProjectsComponents/Projects.astro
@@ -1,6 +1,6 @@
 ---
 import ProjectCard from "./ProjectCard.astro";
-import {dataProjects} from "../config/config"
+import {dataProjects} from "../../config/config"
 ---
 
 <section id="Proyectos" class="flex flex-col gap-y-10 w-full">
