--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/HeaderNav.astro";
 import Inicio from "../components/Inicio.astro";
 import AboutMe from "../components/Aboutme.astro";
-import Projects from "../components/Projects.astro";
-//import Skills from "../components/Skills.astro";
-import Skills from "../components/Skills.jsx";
+import Projects from "../components/ProjectsComponents/Projects.astro";
+import Skills from "../components/SkillsComponents/Skills.jsx";
 ---
 
 <Layout>
