refactor de rutas y carpetas

--- a/src/components/AboutComponents/Aboutme.astro
+++ b/src/components/AboutComponents/Aboutme.astro
@@ -1,5 +1,5 @@
 ---
-import { dataAboutMe } from "../config/config";
+import { dataAboutMe } from "../../config/config";
 ---
 
 <section id="SobreMi" class="flex flex-col gap-y-10 w-full">
