--- a/src/components/InicioComponents/Inicio.astro
+++ b/src/components/InicioComponents/Inicio.astro
@@ -1,6 +1,6 @@
 ---
 import Button from './Button.astro'
-import {dataInicio} from '../config/config'
+import {dataInicio} from '../../config/config'
 ---
 
 <section id="Inicio" class="h-screen flex items-center justify-center w-full">
