--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/HeaderNav.astro";
-import Inicio from "../components/Inicio.astro";
-import AboutMe from "../components/Aboutme.astro";
+import Header from "../components/HeaderComponents/HeaderNav.astro";
+import Inicio from "../components/InicioComponents/Inicio.astro";
+import AboutMe from "../components/AboutComponents/Aboutme.astro";
 import Projects from "../components/ProjectsComponents/Projects.astro";
 import Skills from "../components/SkillsComponents/Skills.jsx";
 ---
