--- a/src/components/ContactComponents/ButtonContacts.astro
+++ b/src/components/ContactComponents/ButtonContacts.astro
@@ -17,7 +17,8 @@ const { url, icon } = Astro.props as Props
     justify-content: center;
     width: 50px;
     height: 50px;
-    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    border-style: solid;
+    border-width: 3px;
     border-radius: 50px;
     transition: 0.2s;
     user-select: none;
