--- a/src/components/ContactComponents/Contact.astro
+++ b/src/components/ContactComponents/Contact.astro
@@ -13,10 +13,10 @@ import { dataContact } from "../../config/config";
   </div>
 
   <div class="grid grid-cols-1 lg:grid-cols-2 px-10 gap-8 text-white">
-    <div class="flex flex-col gap-y-8">
+    <div class="flex flex-col justify-start gap-y-8">
       <p class="font-Rubik">{dataContact.text}</p>
       <a href={"mailto:" + dataContact.email}>
-        <p class="font-bold font-LexendDeca text-center text-xl">{dataContact.email}</p>
+        <p class="font-bold font-sans text-center text-2xl">{dataContact.email}</p>
       </a>
       <div class="flex w-full justify-center gap-x-5">
         {
