--- a/src/components/ContactComponents/Contact.astro
+++ b/src/components/ContactComponents/Contact.astro
@@ -4,7 +4,7 @@ import FormEmail from "./FormEmail.astro"
 import { dataContact } from "../../config/config";
 ---
 
-<section id="Proyectos" class="flex flex-col gap-y-10 w-full">
+<section id="Contacto" class="flex flex-col gap-y-10 w-full">
   <div class="flex flex-col px-5 md:px-0 gap-y-2">
     <h1 class="text-white text-5xl font-Rubik text-center md:text-start">
       CONTACTO
