--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,9 @@
       * {
         scrollbar-width: thin;
         scrollbar-color: #3a3a3b #1f1f1f;
-				overflow-x: hidden;
+        overflow-x: hidden;
+        -webkit-tap-highlight-color: transparent;
+        user-select: none;
       }
       *::-webkit-scrollbar {
         width: 10px;
