scroll reveal added

--- a/src/components/ProjectsComponents/Projects.astro
+++ b/src/components/ProjectsComponents/Projects.astro
@@ -3,7 +3,7 @@ import ProjectCard from "./ProjectCard.astro";
 import {dataProjects} from "../../config/config"
 ---
 
-<section id="Proyectos" class="flex flex-col gap-y-10 w-full">
+<section id="Proyectos" class="projects-reveal flex flex-col gap-y-10 w-full">
   <div class="flex flex-col px-5 md:px-0 gap-y-2">
     <h1 class="text-white text-5xl font-Rubik text-center md:text-start">PROYECTOS</h1>
     <hr>
