--- a/src/components/AboutComponents/Aboutme.astro
+++ b/src/components/AboutComponents/Aboutme.astro
@@ -2,7 +2,7 @@
 import { dataAboutMe } from "../../config/config";
 ---
 
-<section id="SobreMi" class="flex flex-col gap-y-10 w-full">
+<section id="SobreMi" class="aboutme-reveal flex flex-col gap-y-10 w-full">
   <div class="flex flex-col px-5 md:px-0 gap-y-2">
     <h1 class="text-white text-5xl font-Rubik text-center md:text-start">SOBRE MI</h1>
     <hr>
