--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,12 +28,14 @@
         background-color: #3a3a3b;
         border-radius: 20px;
       }
+
+      body{
+        background-color: #111827;
+      }
     </style>
     <title>Runimo94</title>
   </head>
-  <body
-    class="bg-myBackground_sm xl:bg-myBackground bg-cover bg-no-repeat bg-fixed"
-  >
+  <body class="bg-background_content md:bg-background_content bg-cover">
     <slot />
   </body>
   <script src="../utils/scrollReveal.js"></script>
