--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ import Contact from "../components/ContactComponents/Contact.astro";
         <Inicio />
       </div>
 
-      <div class="content-reveal bg-gray-900 w-full flex justify-center py-12">
-        <div class="flex flex-col items-center container bg-gray-900 gap-y-28 ">
+      <div class="content-reveal w-full flex justify-center ">
+        <div class="flex flex-col items-center container gap-y-28 py-20">
         <AboutMe />
         <Projects />
         <div class="skills-reveal w-full">
@@ -27,9 +27,6 @@ import Contact from "../components/ContactComponents/Contact.astro";
         <Contact/>
         </div>
       </div>
-
-			<div class="mb-32"></div>
-
     </div>
   </div>
 </Layout>
