--- a/src/components/InicioComponents/Inicio.astro
+++ b/src/components/InicioComponents/Inicio.astro
@@ -1,28 +1,84 @@
 ---
-import Button from './Button.astro'
-import {dataInicio} from '../../config/config'
+import Button from "./Button.astro";
+import { dataInicio } from "../../config/config";
 ---
 
-<section id="Inicio" class="inicio-reveal h-screen flex items-center justify-center w-full">
+<section
+  id="Inicio"
+  class="inicio-reveal h-screen flex items-center justify-center w-full"
+>
   <div class="flex flex-col gap-y-5">
     <h1
-      class="text-[2.5rem] md:text-[3rem] lg:text-[4rem] xl:text-[5rem] font-bold text-center md:text-end font-LexendDeca text-transparent bg-clip-text bg-gradient-to-r from-color1 to-color2"
+      class="text-[2.5rem] text-white md:text-[3rem] lg:text-[4rem] xl:text-[5rem] font-bold text-center md:text-end font-mono"
     >
       <span>{dataInicio.textHeader}</span>
-      <br />{dataInicio.textHeader2}
+      <span class="hacktext" data-value={dataInicio.name}
+        >{dataInicio.name}</span
+      >
+      <br /><span class="hacktext" data-value={dataInicio.textHeader2}
+        >{dataInicio.textHeader2}</span
+      >
     </h1>
 
-    <div class="flex flex-col items-center justify-center md:items-end md:justify-end md:flex-row text-white gap-x-10 gap-y-5">
+    <div
+      class="flex flex-col items-center justify-center md:items-end md:justify-end md:flex-row text-white gap-x-10 gap-y-5"
+    >
       {
         dataInicio.listButtons.map((btn) => {
-          return(
+          return (
             <>
-              <Button text={btn.text} url={btn.url}/>
+              <Button text={btn.text} url={btn.url} />
             </>
-          )
+          );
         })
       }
     </div>
-
   </div>
 </section>
+
+<style>
+  .hacktext {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+      "Liberation Mono", "Courier New", monospace;
+    color: white;
+    background-color: #1e293b;
+    padding: 0rem clamp(1rem, 2vw, 3rem);
+    border-radius: clamp(0.4rem, 0.75vw, 1rem);
+  }
+
+  .hacktext:hover {
+    background-color: white;
+    color: black;
+  }
+</style>
+
+<script type="text/javascript">
+  const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+
+  setInterval(() => {
+    document.querySelectorAll(".hacktext").forEach((elem) => {
+      let iteration = 0;
+      let interval = null;
+
+      clearInterval(interval);
+
+      interval = setInterval(() => {
+        elem.innerText = elem.dataset.value
+          .split("")
+          .map((_letter, index) => {
+            if (index < iteration) {
+              return elem.dataset.value[index];
+            }
+            return letters[Math.floor(Math.random() * 26)];
+          })
+          .join("");
+
+        if (iteration >= elem.dataset.value.length) {
+          clearInterval(interval);
+        }
+
+        iteration += 1 / 3;
+      }, 30);
+    });
+  }, 5000);
+</script>
