--- a/src/components/InicioComponents/Inicio.astro
+++ b/src/components/InicioComponents/Inicio.astro
@@ -15,9 +15,16 @@ import { dataInicio } from "../../config/config";
       <span class="hacktext" data-value={dataInicio.name}
         >{dataInicio.name}</span
       >
-      <br /><span class="hacktext" data-value={dataInicio.textHeader2}
-        >{dataInicio.textHeader2}</span
-      >
+      <span class="hacktext whitespace-nowrap hidden sm:inline-block" data-value={dataInicio.textHeader2 + " " + dataInicio.textHeader3}>
+        {dataInicio.textHeader2 + " " + dataInicio.textHeader3}
+      </span>
+
+      <span class="hacktext sm:hidden text-end" data-value={dataInicio.textHeader2}>
+        {dataInicio.textHeader2}
+      </span>
+      <span class="hacktext sm:hidden text-end" data-value={dataInicio.textHeader3}>
+        {dataInicio.textHeader3}
+      </span>
     </h1>
 
     <div
