Estilo hacked aplicado en headnav y sidenav

--- a/src/components/HeaderComponents/HeaderNav.astro
+++ b/src/components/HeaderComponents/HeaderNav.astro
@@ -6,13 +6,13 @@ import { dataHeader } from "../../config/config";
   class="fixed z-10 w-full flex justify-end md:justify-center items-center p-4 h-16 backdrop-filter backdrop-blur bg-black/30"
 >
   <div
-    class="hidden md:flex flex-row gap-x-6 md:gap-x-8 lg:gap-x-20 xl:gap-x-32 text-xl text-white whitespace-nowrap font-Rubik"
+    class="hidden md:flex flex-row gap-x-6 md:gap-x-8 lg:gap-x-20 xl:gap-x-32 text-xl text-white whitespace-nowrap"
   >
     {
       dataHeader.listSections.map((section) => {
         return(
           <>
-            <a href={section.id} class="rounded-xl hover:bg-white/5 py-3 px-5">{section.text}</a>
+            <a href={section.id} data-value={section.text} class="hacktext_hover_effect uppercase py-3 px-5">{section.text}</a>
           </>
         )
       })
@@ -35,12 +35,12 @@ import { dataHeader } from "../../config/config";
       </button>
     </div>
 
-    <div class="text-white font-semibold text-xl flex flex-col items-center font-Rubik">
+    <div class="text-white font-semibold text-xl flex flex-col gap-y-5 items-center font-Rubik">
       {
         dataHeader.listSections.map((section) => {
           return(
             <>
-              <a href={section.id} class="w-full rounded-xl text-center hover:bg-white/5 py-3 px-5">{section.text}</a>
+              <a href={section.id} data-value={section.text} class="w-full uppercase text-2xl hacktext_hover_effect text-center py-3 px-5">{section.text}</a>
             </>
           )
         })
