Cambio fuente a monospace

--- a/src/components/InicioComponents/Button.astro
+++ b/src/components/InicioComponents/Button.astro
@@ -7,7 +7,7 @@ interface Props {
 const { text, url } = Astro.props as Props;
 ---
 
-<a href={url} class="font-LexendDeca text-lg sm:text-base lg:text-xl"
+<a href={url} class="font-mono text-lg sm:text-base lg:text-xl"
   ><span>{text}</span></a
 >
 
@@ -33,7 +33,7 @@ const { text, url } = Astro.props as Props;
     --slice-3: inset(10% -6px 85% 0);
     --slice-4: inset(40% -6px 43% 0);
     --slice-5: inset(80% -6px 5% 0);
-    content: "HOVER ME";
+    content: "H A C K E D";
     display: block;
     position: absolute;
     top: 0;
