add js del estilo text hacked para usarlo global

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@
         border-radius: 20px;
       }
 
-      body{
+      body {
         background-color: #111827;
       }
     </style>
@@ -39,4 +39,5 @@
     <slot />
   </body>
   <script src="../utils/scrollReveal.js"></script>
+  <script src="../utils/hacktextEffect.js"></script>
 </html>
